--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,14 +1,30 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>JohnsoniteCom</title>
-  <%= stylesheet_link_tag    "application", media: "all", "data-turbolinks-track" => true %>
-  <%= javascript_include_tag "application", "data-turbolinks-track" => true %>
+  <title>Johnsonite.com</title>
+  <!-- Set the viewport width to device width for mobile -->
+  <meta name="viewport" content="initial-scale=1.0, maximum-scale=1.0, user-scalable=no, width=device-width" />  
+  <%= stylesheet_link_tag    "application", :media => "all" %>
+  <%= javascript_include_tag "application" %>
   <%= csrf_meta_tags %>
 </head>
 <body>
+  <nav class="top-bar">
+  <section class="top-bar-section" id="menu">
+      <ul class="left">
+        <li><a href="/" id="logo">Johnsonite.com</a></li>
+      </ul>
+  </section>
+</nav>
 
-<%= yield %>
+  <div class="row panel" id="main">
+    <div class="large-12">
+      <%= yield %>
+    </div>
+  </div>
 
+  <div class="row centered" id="footer">
+    Copyright &copy; <%= Date.today.year %> Johnsonite.com
+  </div> 
 </body>
 </html>
