--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,6 +13,15 @@
   <section class="top-bar-section" id="menu">
       <ul class="left">
         <li><a href="/" id="logo">Johnsonite.com</a></li>
+        <% if user_signed_in? %>
+  <li>
+  <%= link_to('Logout', destroy_user_session_path, :method => :delete) %>        
+  </li>
+<% else %>
+  <li>
+  <%= link_to('Login', new_user_session_path)  %>  
+  </li>
+<% end %>
       </ul>
   </section>
 </nav>
