--- a/app/assets/stylesheets/application.css.scss.erb
+++ b/app/assets/stylesheets/application.css.scss.erb
@@ -43,16 +43,6 @@ body {
   transition: $type 0.25s ease-in-out; -moz-transition: $type 0.25s ease-in-out; -webkit-transition: $type 0.25s ease-in-out; -o-transition: $type 0.25s ease-in-out;
 }
 
-.top-bar {  margin-bottom: 0 !important;box-shadow: 0 1px 3px #AAA;height:78px;width: 100%;
-  .top-bar-section{ 
-    ul { background:none!important;}
-      li {color:$white;;font-size: 15px;
-      }
-    > ul > .divider {border-right: solid 1px #FFF; border-left: solid 1px black; padding:0;}
-    ul.right a {background:none!important;width:auto!important;float:right;color:white;font-size: 15px;font-weight: normal!important;&:hover{color: #DDD; @include transition(all);}}
-  }
-}
-
 .button {
   &.blue, & {
     $color: #CFC9A4; 
@@ -87,3 +77,12 @@ body {
 }
 .centered {text-align: center;}
 #footer {font-size: 12px;}
+
+table {
+  border-collapse: collapse;
+  width: 100%;
+  th {
+    color: white !important;
+    background: #333;
+  }
+}
