--- a/app/assets/stylesheets/foundation_and_overrides.scss
+++ b/app/assets/stylesheets/foundation_and_overrides.scss
@@ -1,106 +1,59 @@
-// Settings file containing Foundation defaults
+/* Background color for the top bar */
+$topbar-bg: #111;
 
-// Grid Settings
+/* Height and margin */
+$topbar-height: 65px;
+$topbar-margin-bottom: emCalc(30);
 
-// $rowWidth: 1000px;
-// $columnGutter: 30px;
-// $totalColumns: 12;
-// $mobileTotalColumns: 4;
+/* Control Input height for top bar */
+$topbar-input-height: 2.45em;
 
-// Text Direction Settings
+/* Controlling the styles for the title in the top bar */
+$topbar-title-weight: bold;
+$topbar-title-font-size: emCalc(17);
 
-// $textDirection: ltr; // Controls default global text direction, 'rtl' or 'ltr'
+/* Style the top bar dropdown elements */
+$topbar-dropdown-bg: #222;
+$topbar-dropdown-link-color: #fff;
+$topbar-dropdown-link-bg: lighten($topbar-bg, 5%);
+$topbar-dropdown-toggle-size: 5px;
+$topbar-dropdown-toggle-color: #fff;
+$topbar-dropdown-toggle-alpha: 0.5;
 
-// Colors Settings
+/* Set the link colors and styles for top-level nav */
+$topbar-link-color: #fff;
+$topbar-link-color-hover: #CCC;
+$topbar-link-color-active: #fff;
+$topbar-link-weight: bold;
+$topbar-link-font-size: emCalc(13);
+$topbar-link-hover-lightness: -30%; /* Darken by 30% */
+$topbar-link-bg-hover: darken($topbar-bg, 3%);
+$topbar-link-bg-active: darken($topbar-bg, 3%);
 
-// $mainColor: #2ba6cb;
-// $secondaryColor: #e9e9e9;
-// $alertColor: #c60f13;
-// $successColor: #5da423;
-// $txtColor: #222;
-// $highlightColor: #ffff99;
-// $black: #000;
-// $white: #fff;
-// $shinyEdge: rgba(#fff, .5);
-// $darkEdge: rgba(#000, .2);
+$topbar-dropdown-label-color: #555;
+$topbar-dropdown-label-text-transform: uppercase;
+$topbar-dropdown-label-font-weight: bold;
+$topbar-dropdown-label-font-size: emCalc(10);
 
-// Typography Settings
+/* Top menu icon styles */
+$topbar-menu-link-transform: uppercase;
+$topbar-menu-link-font-size: emCalc(13);
+$topbar-menu-link-weight: bold;
+$topbar-menu-link-color: #fff;
+$topbar-menu-icon-color: #fff;
+$topbar-menu-link-color-toggled: #888;
+$topbar-menu-icon-color-toggled: #888;
 
-// $headerFontFamily: "Helvetica Neue", "Helvetica", Helvetica, Arial, sans-serif;
-// $headerFontWeight: bold;
-// $headerFontColor: #222;
-// $bodyFontFamily: "Helvetica Neue", "Helvetica", Helvetica, Arial, sans-serif;
-// $bodyFontWeight: normal;
-// $bodyFontColor: $txtColor;
+/* Transitions and breakpoint styles */
+$topbar-transition-speed: 300ms;
+$topbar-breakpoint: emCalc(940); /* Change to 9999px for always mobile layout */
+$topbar-media-query: "only screen and (min-width: #{$topbar-breakpoint})";
 
-// Button Settings
+/* Divider Styles */
+$topbar-divider-border-bottom: solid 1px lighten($topbar-bg, 10%);
+$topbar-divider-border-top: solid 1px darken($topbar-bg, 10%);
 
-// $buttonRadius: 3px;
-// $btnBase: 10px;
+/* Sticky Class */
+$topbar-sticky-class: ".sticky";
 
-// $tinyBtnBase: $btnBase - 5;
-// $smallBtnBase: $btnBase - 3;
-// $largeBtnBase: $btnBase + 5;
-
-// Form Settings
-
-// $formSpacing: 12px;
-
-// Tab Settings
-
-// $tabHeight: 40px;
-
-// Nav Bar Settings
-
-// $navBarHeight: 40px;
-// $navFlyoutBaseWidth: 250px;
-
-// UI Settings
-
-// $thumbRadius: 3px;
-
-// $progBarHeight: 25px;
-// $progBarBorderColor: darken($white, 20%);
-// $progBarBorderSize: 1px;
-// $progBarPad: 2px;
-
-// Modular Scale
-
-// $ratio: $golden;
-// $baseFontSize: 14px;
-// $importantModNum: 44px;
-
-// Tooltip Settings
-
-// $hasTipBorderBottom: dotted 1px #ccc;
-// $hasTipFontWeight: bold;
-// $hasTipFontColor: #333;
-// $hasTipBorderBottomHover: dotted 1px darken($mainColor, 20%);
-// $hasTipFontColorHover: $mainColor;
-// $tooltipBackgroundColor: #000;
-// $tooltipBackgroundOpacity: 0.85;
-// $tooltipFontSize: 12;
-// $tooltipFontWeight: bold;
-// $tooltipFontColor: #fff;
-// $tapToCloseFontSize: 10;
-// $tapToCloseFontWeight: normal;
-// $tapToCloseFontColor: #888;
-// $tooltipFontSizeScreenSmall: 14;
-// $tooltipBackgroundOpacityScreenSmall: 0.85;
-
-// Top Bar Settings
-
-// $topBarBgColor: #222;
-// $topBarHeight: 45px;
-// $topBarBtmMargin: 30px;
-// $topBarTitleWeight: bold;
-// $topBarTitleSize: ms(1);
-// $topBarLinkColor: $white;
-// $topBarLinkWeight: bold;
-// $topBarLinkSize: ms(0) - 1;
-// $topBarDropToggleSize: 5px;
-// $topBarSearchWidth: 200px;
-// $topBarBreakPoint: 940px; // Change to 9999px for always mobile layout
-// $topBarNavToggleSize: 8px;
 @import 'foundation';
-
