Various style changes.

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -26,8 +26,12 @@
   </section>
 </nav>
 
-  <div class="row panel" id="main">
-    <div class="large-12">
+  <div class="row" id="main">
+    <div class="large-4">
+      <ul>
+
+    </div>
+    <div class="large-8">
       <%= yield %>
     </div>
   </div>
