--- a/app/views/users/my_account.html.erb
+++ b/app/views/users/my_account.html.erb
@@ -1,7 +1,7 @@
 <style>
  .large-2 {text-align: right;}
 </style>
-<h1>Your account</h1>
+<h1>Your account <small><%= link_to "(edit)", edit_user_registration_path %></small></h1>
 <hr />
 
 <div class='row'>
