--- a/app/assets/stylesheets/application.css.scss.erb
+++ b/app/assets/stylesheets/application.css.scss.erb
@@ -86,3 +86,11 @@ table {
     background: #333;
   }
 }
+
+.section-container.vertical-nav {
+  width: 100%;
+  section {
+    width: 100%;
+    p {width: 100%;}
+  }
+}
