--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -41,6 +41,15 @@
           </ul>
         </div>
       </section>
+      <section>
+        <p class="title" data-section-title><a href="#">Product Categories</a></p>
+        <div class="content" data-section-content>
+          <ul class="side-nav">
+            <li><%= link_to 'All Product Categories', product_categories_path %></li>            
+            <li><%= link_to 'New Product Category', new_product_category_path %></li>            
+          </ul>
+        </div>
+      </section>
     </div>
     <% end %>
   </div>
