--- a/app/views/product_categories/new.html.erb
+++ b/app/views/product_categories/new.html.erb
@@ -1,7 +1,7 @@
 <h1>New Product Category</h1>
 <hr />
 <%= form_for @product_category do |f| %>
-
+  <%= f.error_messages %>
   <%= render partial: 'form', locals: {f: f} %>
   
   <%= f.submit "Create", class: 'nice button radius' %>
