Added product families

--- a/app/views/product_families/new.html.erb
+++ b/app/views/product_families/new.html.erb
@@ -1,7 +1,7 @@
-<h1>New Product Category</h1>
+<h1>New Product Family</h1>
 <hr />
-<%= form_for @product_category do |f| %>
-  
+<%= form_for @product_family do |f| %>
+
   <%= render partial: 'form', locals: {f: f} %>
   
   <%= f.submit "Create", class: 'nice button radius' %>
