--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -50,6 +50,15 @@
           </ul>
         </div>
       </section>
+      <section>
+        <p class="title" data-section-title><a href="#">Product Families</a></p>
+        <div class="content" data-section-content>
+          <ul class="side-nav">
+            <li><%= link_to 'All Product Families', product_families_path %></li>            
+            <li><%= link_to 'New Product Family', new_product_family_path %></li>            
+          </ul>
+        </div>
+      </section>
     </div>
     <% end %>
   </div>
