--- a/app/views/product_categories/index.html.erb
+++ b/app/views/product_categories/index.html.erb
@@ -13,7 +13,7 @@
   <tbody>
     <% @product_categories.all.each do |pc| %>
     <tr>
-      <td><%= pc.name %></td><td><%= link_to 'edit', edit_product_category_path(pc), class: 'small button radius' %> <%= link_to 'delete', product_category_path(pc), method: :delete, data: {confirm: 'Are you sure?'}, class: 'small red button nice radius' %></td>
+      <td><%= pc.name %> (<%= pluralize pc.product_families.count, 'product family' %>)</td><td><%= link_to 'edit', edit_product_category_path(pc), class: 'small button radius' %> <%= link_to 'delete', product_category_path(pc), method: :delete, data: {confirm: 'Are you sure?'}, class: 'small red button nice radius' %></td>
     </tr>
     <% end %>
   </tbody>
