--- a/app/assets/stylesheets/foundation_and_overrides.scss
+++ b/app/assets/stylesheets/foundation_and_overrides.scss
@@ -1,6 +1,11 @@
 /* Background color for the top bar */
 $topbar-bg: #111;
 
+$primary-color: #43a5fb !default;
+$secondary-color: #e9e9e9 !default;
+$alert-color: #c60f13 !default;
+$success-color: #5da423 !default;
+
 $body-font-family: "Open Sans";
 $header-font-family: "Open Sans";
 /* Height and margin */
