--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,24 +10,35 @@
 </head>
 <body>
   <nav class="top-bar">
-  <section class="top-bar-section" id="menu">
-      <ul class="left">
-        <li><a href="/" id="logo"><%= image_tag "logo.gif" %></a></li>
-      </ul>      
-      <ul class="right hide-for-small">
-      <% if user_signed_in? %>
-        <li><%= link_to current_user.email, my_account_path %></li>
-        <li class="divider"></li>
-        <li><%= link_to('Logout', destroy_user_session_path, :method => :delete) %></li>
-      <% else %>
-        <li><%= link_to('Login', new_user_session_path)  %></li>
-      <% end %>
-      </ul>
-  </section>
-</nav>
+    <section class="top-bar-section" id="menu">
+        <ul class="left">
+          <li><a href="/" id="logo"><%= image_tag "logo.gif" %></a></li>
+        </ul>      
+        <ul class="right hide-for-small">
+        <% if user_signed_in? %>
+          <li><%= link_to current_user.email, my_account_path %></li>
+          <li class="divider"></li>
+          <li><%= link_to('Logout', destroy_user_session_path, :method => :delete) %></li>
+        <% else %>
+          <li><%= link_to('Login', new_user_session_path)  %></li>
+        <% end %>
+        </ul>
+    </section>
+  </nav>
+
+  <% if flash[:notice] %>
+    <div class='alert-box notice shadow'><%= flash[:notice] %></div>
+  <% end %>
+
+  <% if flash[:error] %>
+    <div data-alert class='alert-box alert'>
+      <%= flash[:error] %>
+      <a href="#" class="close">&times;</a>
+    </div>
+  <% end %>
 
   <div class="row" id="main">
-  <div class="large-3 columns">
+  <div id="side-nav" class="large-3 columns">
     <% if current_user.try(:admin?) %>
     <div class="section-container vertical-nav" data-section="vertical-nav" data-options="one_up: false;">
       <section>
@@ -56,6 +67,15 @@
           <ul class="side-nav">
             <li><%= link_to 'All Product Families', product_families_path %></li>            
             <li><%= link_to 'New Product Family', new_product_family_path %></li>            
+          </ul>
+        </div>
+      </section>
+      <section>
+        <p class="title" data-section-title><a href="#">Product Thicknesses</a></p>
+        <div class="content" data-section-content>
+          <ul class="side-nav">
+            <li><%= link_to 'All Product Thicknesses', product_thicknesses_path %></li>            
+            <li><%= link_to 'New Product Thickness', new_product_thickness_path %></li>            
           </ul>
         </div>
       </section>
