Added widths and lengths.

--- a/app/assets/stylesheets/application.css.scss.erb
+++ b/app/assets/stylesheets/application.css.scss.erb
@@ -132,6 +132,10 @@ table {
   }
   section:last-child {
     p {border-radius: 0 0 5px 5px}
+    .content {
+      border-left: 1px solid #CCC;
+      margin-left: -1px;
+    }
   }
 
 }
