Updated yellow button.

--- a/app/assets/stylesheets/application.css.scss.erb
+++ b/app/assets/stylesheets/application.css.scss.erb
@@ -121,7 +121,7 @@ body {
     }
   }
   &.yellow {
-    $colorA: #fefcea; 
+    $colorA: #FCF18A; 
     $colorB: #f1da36; 
     color: #444 !important;
     text-shadow: 0 1px 1px rgba(255,255,255,0.7); 
