--- a/app/views/product_categories/new.html.erb
+++ b/app/views/product_categories/new.html.erb
@@ -1,4 +1,4 @@
-<h1>New Product Category</h1>
+<h3 class="subheader">New Product Category</h3>
 <hr />
 <%= form_for @product_category do |f| %>
   
