--- a/app/views/product_thicknesses/edit.html.erb
+++ b/app/views/product_thicknesses/edit.html.erb
@@ -1,4 +1,4 @@
-<h1>Edit Product Thickness</h1>
+<h3 class="subheader">Edit Product Thickness</h3>
 <hr />
 <%= form_for @product_thickness do |f| %>
 
