--- a/app/views/product_thicknesses/new.html.erb
+++ b/app/views/product_thicknesses/new.html.erb
@@ -1,4 +1,4 @@
-<h1>New Product Thickness</h1>
+<h3 class="subheader">New Product Thickness</h3>
 <hr />
 <%= form_for @product_thickness do |f| %>
   
