--- a/app/views/wallbase_collections/_wallbase_collection_section_fields.html.erb
+++ b/app/views/wallbase_collections/_wallbase_collection_section_fields.html.erb
@@ -3,5 +3,5 @@
   <%= f.text_field :title, placeholder: 'Enter title text here.' %><br />  
   <%= f.text_area :body, placeholder: 'Enter body text here.' %><br />  
   <%= f.hidden_field :_destroy %>
-  <%= link_to "remove", '#', class: "remove_fields small alert button" %>
+  <%= link_to "remove", '#', class: "remove_fields small red button nice radius" %>
 </fieldset>
