--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -39,54 +39,81 @@
   <% end %>
 
   <div class="row" id="main">
-  <div id="side-nav" class="side-nav large-3 columns">
-    <% if current_user.try(:admin?) %>
-    <h5>Main</h5>
-    <div class="section-container vertical-nav" data-section="vertical-nav" data-options="one_up: false;">
-      <section>
-        <p class="title" data-section-title><%= link_to 'Home', root_path %></p>        
-      </section>
-      <section>
-        <p class="title" data-section-title><%= link_to 'Users', users_path %></p>
-      </section>
-    </div>
-    <h5>Products</h5>
-    <div class="section-container vertical-nav" data-section="vertical-nav" data-options="one_up: false;">
-      <section>
-        <p class="title" data-section-title><%= link_to 'Product Categories', product_categories_path %></p>
-      </section>
-      <section>
-        <p class="title" data-section-title><%= link_to 'Product Families', product_families_path %></p>
-      </section>
-      <section>
-        <p class="title" data-section-title><%= link_to 'Product Thicknesses', product_thicknesses_path %></p>
-      </section>
-      <section>
-        <p class="title" data-section-title><%= link_to 'Product Widths', product_widths_path %></p>
-      </section>
-      <section>
-        <p class="title" data-section-title><%= link_to 'Product Lengths', product_lengths_path %></p>
-      </section>
+    <div id="" class="large-3 columns show-for-small">
+      <% if current_user.try(:admin?) %>
+        <select id="nav-select">
+          <option>Navigation</option>
+          <optgroup label="Main">
+            <option <%= "selected='selected'" if request.fullpath == root_path %> value="<%= root_path %>">Home</option>
+            <option <%= "selected='selected'" if request.fullpath == users_path %> value="<%= users_path %>">Users</option>
+          </optgroup>
+          <optgroup label="Products">
+            <option <%= "selected='selected'" if request.fullpath == product_categories_path %> value="<%= product_categories_path %>">Product Categories</option>
+            <option <%= "selected='selected'" if request.fullpath == product_families_path %> value="<%= product_families_path %>">Product Families</option>
+            <option <%= "selected='selected'" if request.fullpath == product_thicknesses_path %> value="<%= product_thicknesses_path %>">Product Thicknesses</option>
+            <option <%= "selected='selected'" if request.fullpath == product_widths_path %> value="<%= product_widths_path %>">Product Widths</option>
+            <option <%= "selected='selected'" if request.fullpath == product_lengths_path %> value="<%= product_lengths_path %>">Product Lengths</option>
+          </optgroup>
+          <optgroup label="Wallbase">
+            <option <%= "selected='selected'" if request.fullpath == wallbase_collections_path %> value="<%= wallbase_collections_path %>">Wallbase Collections</option>
+            <option <%= "selected='selected'" if request.fullpath == wallbase_style_types_path %> value="<%= wallbase_style_types_path %>">Wallbase Style Types</option>
+          </optgroup>
+          <optgroup label="Colors">
+            <option <%= "selected='selected'" if request.fullpath == color_palettes_path %> value="<%= color_palettes_path %>">Colors & Palettes</option>
+          </optgroup>        
+        </select>
+      <% end %>
     </div>
 
-    <h5>Wallbase</h5>
-    <div class="section-container vertical-nav" data-section="vertical-nav" data-options="one_up: false;">      
-      <section>
-        <p class="title" data-section-title><%= link_to 'Wallbase Collections', wallbase_collections_path %></p>
-      </section>
-      <section>
-        <p class="title" data-section-title><%= link_to 'Wallbase Style Types', wallbase_style_types_path %></p>
-      </section>
+    <div id="side-nav" class="side-nav large-3 columns hide-for-small">
+      <% if current_user.try(:admin?) %>
+      <h5>Main</h5>
+      <div class="section-container vertical-nav" data-section="vertical-nav" data-options="one_up: false;">
+        <section>
+          <p class="title" data-section-title><%= link_to 'Home', root_path %></p>        
+        </section>
+        <section>
+          <p class="title" data-section-title><%= link_to 'Users', users_path %></p>
+        </section>
+      </div>
+      <h5>Products</h5>
+      <div class="section-container vertical-nav" data-section="vertical-nav" data-options="one_up: false;">
+        <section>
+          <p class="title" data-section-title><%= link_to 'Product Categories', product_categories_path %></p>
+        </section>
+        <section>
+          <p class="title" data-section-title><%= link_to 'Product Families', product_families_path %></p>
+        </section>
+        <section>
+          <p class="title" data-section-title><%= link_to 'Product Thicknesses', product_thicknesses_path %></p>
+        </section>
+        <section>
+          <p class="title" data-section-title><%= link_to 'Product Widths', product_widths_path %></p>
+        </section>
+        <section>
+          <p class="title" data-section-title><%= link_to 'Product Lengths', product_lengths_path %></p>
+        </section>
+      </div>
+
+      <h5>Wallbase</h5>
+      <div class="section-container vertical-nav" data-section="vertical-nav" data-options="one_up: false;">      
+        <section>
+          <p class="title" data-section-title><%= link_to 'Wallbase Collections', wallbase_collections_path %></p>
+        </section>
+        <section>
+          <p class="title" data-section-title><%= link_to 'Wallbase Style Types', wallbase_style_types_path %></p>
+        </section>
+      </div>
+
+      <h5>Colors</h5>
+      <div class="section-container vertical-nav" data-section="vertical-nav" data-options="one_up: false;">      
+        <section>
+          <p class="title" data-section-title><%= link_to 'Colors & Palettes', color_palettes_path %></p>
+        </section>
+      </div>
+      <% end %>
     </div>
 
-    <h5>Colors</h5>
-    <div class="section-container vertical-nav" data-section="vertical-nav" data-options="one_up: false;">      
-      <section>
-        <p class="title" data-section-title><%= link_to 'Colors & Palettes', color_palettes_path %></p>
-      </section>
-    </div>
-    <% end %>
-  </div>
   
     <div class="large-9 columns">
       <%= yield %>
