--- a/app/views/product_categories/edit.html.erb
+++ b/app/views/product_categories/edit.html.erb
@@ -1,4 +1,4 @@
-<h1>Edit Product Category</h1>
+<h3 class="subheader">Edit Product Category</h3>
 <hr />
 <%= form_for @product_category do |f| %>
 
