--- a/app/views/wallbase_collections/edit.html.erb
+++ b/app/views/wallbase_collections/edit.html.erb
@@ -4,7 +4,7 @@
   <%= f.error_messages %>
   <%= f.text_field :name, placeholder: "Collection Name" %>
   <%= f.text_field :material, placeholder: "Material Name (Rubber)" %>
-  <%= f.text_area :collection_description, placeholder: "Type description here." %>
+  <%= f.text_area :collection_description, placeholder: "Type description here.", rows: 8, style: 'height: auto;' %>
 
   <ul id="spec-image-list" class="large-block-grid-5">
     <li>
@@ -28,7 +28,7 @@
     <li>
       <label>
         <%= f.check_box :icon_4 %>
-        <%= image_tag "wallbase/icon_phthalateFree.png" %>
+        <%= image_tag "wallbase/icon_phthalateFree.png", style: 'width: 100px' %>
        </label>
     </li>
     <li>
@@ -39,15 +39,15 @@
     </li>
   </ul>
   <hr />
-  <%= link_to_add_fields "Add Section", f, :collection_sections, class: 'small success button' %>
+ <%= link_to_add_fields "Add Section", f, :wallbase_collection_sections, class: 'small yellow success button nice radius' %>
   
   <div class="row">
     <div class="large-12 columns">      
-       <%= f.fields_for :collection_sections do |builder| %>
-         <%= render 'collection_section_fields', f: builder %>
+       <%= f.fields_for :wallbase_collection_sections do |builder| %>
+         <%= render 'wallbase_collection_section_fields', f: builder %>
        <% end %>
     </div>
   </div>
 
-  <%= f.submit "Update Collection", class: 'small button' %> <%= link_to "Cancel", wallbase_collection_path(@collection), class: 'small alert button' %>
+  <%= f.submit "Update Collection", class: 'nice button radius' %> <%= link_to "Cancel", wallbase_collections_path, class: 'red button nice radius' %>
 <% end %>
