--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,3 +1,3 @@
-<h2>Welcom to the admin section</h2>
+<h3 class="subheader">Welcome to the admin section</h3>
 <hr />
 <p>Use the navigation on the left to get started.</p>
