--- a/app/views/color_palettes/index.html.erb
+++ b/app/views/color_palettes/index.html.erb
@@ -1,31 +1,19 @@
 <style>
-.swatch {
-  width: 50px;
-  height: 50px;
-  margin: 0 auto;
-  border: 3px solid whitesmoke;
-}
-
-.shadow {
-  box-shadow: 0 1px 3px #AAA;
-}
-
 .color-swatch {
   margin-top: 12px;
   padding-bottom: 20px;
   text-align: center;
   border-bottom: 1px solid #CCC;
 }
-.red {
-  color: red;
-}
 </style>
 
-<%= link_to "+ Add Color Palette", new_color_palette_path, class: 'success button nice radius right' %>
 <h3 class="subheader">List of Color Palettes</h3>
 
 <hr />
-<br />
+
+<%= link_to "New Color Palette", new_color_palette_path, class: 'success button nice radius' %>
+
+<%= select_tag :color_palette, options_for_select( @color_palettes.map { |cp| cp.name } ), id: 'palette-select', prompt: 'Select a palette' %>
 
 <div class="section-container tabs" data-section>
 <% @color_palettes.each do |color_palette| %>  
@@ -35,31 +23,27 @@
     <section class="section">
   <% end %>
 
-    <div class="title" style="width: <%= 100.0 / @color_palettes.count.to_f %>%">
-        <% if color_palette.name == "Selects" %>     
-          <h5 style="text-align: center"><%= color_palette.name[0..2] %> (<%= Color.where(:selects => true).count %>)</h5>
-        <% else %>
-          <h5 style="text-align: center"><%= color_palette.name[0..2] %> (<%= color_palette.colors.count %>)</h5>
-        <% end %>
-    </div>
+  <div class="title hide">
+    <h5 style="text-align: center"><%= color_palette.name %></h5>
+  </div>
 
     <div class="content">
-      <br />
+      <h4 class="subheader">Palette <%= color_palette.name %></h4>
       <div class="row">
-        <div class="large-3 columns">
-          <%= link_to "+ Add Color", new_color_path(id: color_palette.id), class: 'success small button nice radius' %>
+        <div class="large-12 columns">
+          <%= link_to "Add New Color", new_color_path(id: color_palette.id), class: 'success small button nice radius' %>
+          <%= link_to "Delete Color Palette", color_palette_path(color_palette), method: :delete, class: 'red small button nice radius right', data: {confirm: "Are you sure?"} %>
+          <%= link_to "Edit Color Palette", edit_color_palette_path(color_palette), class: 'small yellow button nice radius right right-space' %>
         </div>        
         <div class="large-5 large-offset-4 columns">
           <ul class="inline-list">
-            <li><%= link_to "Edit Color Palette", edit_color_palette_path(color_palette), class: 'small button nice radius' %></li>
-            <li><%= link_to "Delete Color Palette", color_palette_path(color_palette), method: :delete, class: 'alert small button nice radius', data: {confirm: "Are you sure?"} %></li>
           </ul>
         </div>
         <hr />
       </div>
-      <div class="row">
+      <ul class="large-block-grid-4 small-block-grid-1">
         <%= color_swatch_for color_palette %>
-      </div>
+      </ul>
     </div>
   </section>
 <% end %>
