--- a/app/assets/stylesheets/application.css.scss.erb
+++ b/app/assets/stylesheets/application.css.scss.erb
@@ -226,3 +226,18 @@ select {
 .right-space {
   margin-right: 8px !important;
 }
+
+.red_text {
+  color: red;
+}
+
+.swatch {
+  width: 50px;
+  height: 50px;
+  margin: 0 auto;
+  border: 3px solid whitesmoke;
+}
+
+.shadow {
+  @include shadow-big;
+}
