--- a/app/views/color_palettes/new.html.erb
+++ b/app/views/color_palettes/new.html.erb
@@ -10,5 +10,5 @@
   <br />
   <%= f.text_field :name, placeholder: "Color Palette Name" %>
   
-  <%= f.submit "Create Color Palette", class: 'success button nice radius' %> <%= link_to "Cancel", color_palettes_path, class: 'alert button nice radius' %>
+  <%= f.submit "Create Color Palette", class: 'success button nice radius' %> <%= link_to "Cancel", color_palettes_path, class: 'red button nice radius' %>
 <% end %>
