--- a/app/views/colors/edit.html.erb
+++ b/app/views/colors/edit.html.erb
@@ -16,5 +16,5 @@
     <%= f.check_box :selects %> Selects Palette Color?
   </label>
   <br />
-  <%= f.submit "Update Color", class: 'success button nice radius' %> <%= link_to "Cancel", color_palettes_path, class: 'alert button nice radius' %>
+  <%= f.submit "Update Color", class: 'success button nice radius' %> <%= link_to "Cancel", color_palettes_path, class: 'red button nice radius' %>
 <% end %>
