--- a/app/assets/stylesheets/application.css.scss.erb
+++ b/app/assets/stylesheets/application.css.scss.erb
@@ -241,3 +241,10 @@ select {
 .shadow {
   @include shadow-big;
 }
+
+.color-swatch {
+  margin-top: 12px;
+  padding-bottom: 20px;
+  text-align: center;
+  border-bottom: 1px solid #CCC;
+}
