Finished CRUD for color families, warranties, patterns, and textures.

--- a/app/assets/stylesheets/application.css.scss.erb
+++ b/app/assets/stylesheets/application.css.scss.erb
@@ -202,7 +202,7 @@ table {
   text-align: center;
   z-index: 999;
   top: 65px;
-  position: fixed;
+  position: absolute;
   width: 100%;
   border: 0;
   @include shadow;
