--- a/app/assets/stylesheets/application.css.scss.erb
+++ b/app/assets/stylesheets/application.css.scss.erb
@@ -214,7 +214,7 @@ select {
     appearance:none;
     height: 32px;
     overflow: hidden;
-    background: url(dropdown_background.png) no-repeat right #fff;
+    background: url(/assets/dropdown_background.png) no-repeat right #fff;
     border: 1px solid #ccc;
     padding-left: 10px;
     font-size: 0.875em;
