--- a/app/assets/stylesheets/application.css.scss.erb
+++ b/app/assets/stylesheets/application.css.scss.erb
@@ -248,3 +248,45 @@ select {
   text-align: center;
   border-bottom: 1px solid #CCC;
 }
+
+.color-palette {
+    padding: 2px 7px;
+    text-align: center;
+    color: white;    
+    width: 20px;
+    /* radius */
+    border-radius: 18px;
+    -ms-border-radius: 18px;
+    -webkit-border-radius: 18px;
+    -moz-border-radius: 18px;
+    -o-border-radius: 18px;
+  }
+  .color-palette-wall-art { background: blue; }
+  .color-palette-Wood { background: #a87250; }
+  .color-palette-Stone { background: #9b9b9b; }
+  .color-palette-A { background: #B0A2F2; }
+  .color-palette-B { background: #699E8E; }
+  .color-palette-C { background: #E87068; }
+  .color-palette-D { background: #9FC181; }
+  .color-palette-W { background: #F2DFBC; color: #333; }
+  .color-palette-Selects {
+    margin-left: 8px; 
+    margin-top: -1px;
+    height: 15px; 
+    width: 15px; 
+    background: maroon;
+    color: transparent;
+    position: absolute;
+    /* radius */
+    border-radius: 0;
+    -ms-border-radius: 0;
+    -webkit-border-radius: 0;
+    -moz-border-radius: 0;
+    -o-border-radius: 0;
+    /* transform */
+    transform: rotate(45deg); 
+    -ms-transform: rotate(45deg); 
+    -webkit-transform: rotate(45deg); 
+    -moz-transform: rotate(45deg); 
+    -o-transform: rotate(45deg); 
+  }
