--- a/app/assets/stylesheets/application.css.scss.erb
+++ b/app/assets/stylesheets/application.css.scss.erb
@@ -261,15 +261,15 @@ select {
     -moz-border-radius: 18px;
     -o-border-radius: 18px;
   }
-  .color-palette-wall-art { background: blue; }
-  .color-palette-Wood { background: #a87250; }
-  .color-palette-Stone { background: #9b9b9b; }
-  .color-palette-A { background: #B0A2F2; }
-  .color-palette-B { background: #699E8E; }
-  .color-palette-C { background: #E87068; }
-  .color-palette-D { background: #9FC181; }
-  .color-palette-W { background: #F2DFBC; color: #333; }
-  .color-palette-Selects {
+  .color-palette-wall-art { background: #003241; }
+  .color-palette-wood { background: #a87250; }
+  .color-palette-stone { background: #9b9b9b; }
+  .color-palette-a { background: #B0A2F2; }
+  .color-palette-b { background: #699E8E; }
+  .color-palette-c { background: #E87068; }
+  .color-palette-d { background: #9FC181; }
+  .color-palette-w { background: #F2DFBC; color: #333; }
+  .color-palette-selects {
     margin-left: 8px; 
     margin-top: -1px;
     height: 15px; 
