--- a/app/views/wallbase_collections/show.html.erb
+++ b/app/views/wallbase_collections/show.html.erb
@@ -24,7 +24,7 @@ a.red {color: red;}
               <li><%= p.size %>" <%= p.uuid %> <%= link_to "Edit", edit_wallbase_profile_path(p) %> | <%= link_to "Delete", wallbase_profile_path(p), class: 'red', method: :delete, data: {confirm: "Are you sure?"} %>
               <br />
               <% p.color_palettes.each do |cp| %>
-                <span class="color-palette color-palette-<%= cp.name %>"><%= cp.name == 'Selects' ? '&nbsp;'.html_safe : cp.name %></span>
+                <span class="color-palette <%= cp.css_class %>"><%= cp.name == 'Selects' ? '&nbsp;'.html_safe : cp.name %></span>
               <% end %>
               </li>
             <% end %>
