--- a/app/views/wallbase_profiles/edit.html.erb
+++ b/app/views/wallbase_profiles/edit.html.erb
@@ -6,19 +6,19 @@
   <br />
   <%= f.label :wallbase_style_type_id, "Style Type" %>
   <%= f.select :wallbase_style_type_id, WallbaseStyleType.all.map {|st| [st.name, st.id]}, :selected => @profile.wallbase_style_type_id %>
-  <br />
-  <br />
+  <%= f.label :uuid, "UUID" %>
   <%= f.text_field :uuid, placeholder: "MW-XX-C" %>
+  <%= f.label :size, "Size" %>
   <%= f.text_field :size, placeholder: "2\"" %>
   
   <fieldset>
     <legend>Choose Palettes:</legend>
       <% ColorPalette.order(:name).each do |cp| %>
         <label>
-          <%= check_box_tag "profile[color_palette_ids][]", cp.id, @profile.color_palettes.include?(cp) %> <%= cp.name %>
+          <%= check_box_tag "profile[color_palette_ids][]", cp.id, @profile.color_palettes.include?(cp) %> <span class="color-palette <%= cp.css_class %>"><%= cp.name %></span>
         </label><br />
     <% end %>
   </fieldset>
   
-  <%= f.submit "Update Profile", class: 'small button nice radius' %> <%= link_to "Cancel", wallbase_collection_path(@profile.wallbase_collection), class: 'small red button nice radius' %>
+  <%= f.submit "Update Profile", class: ' button nice radius' %> <%= link_to "Cancel", wallbase_collection_path(@profile.wallbase_collection), class: ' red button nice radius' %>
 <% end %>
