--- a/app/assets/stylesheets/application.css.scss.erb
+++ b/app/assets/stylesheets/application.css.scss.erb
@@ -245,8 +245,7 @@ select {
 .color-swatch {
   margin-top: 12px;
   padding-bottom: 20px;
-  text-align: center;
-  border-bottom: 1px solid #CCC;
+  text-align: center; 
 }
 
 .color-palette {
@@ -289,4 +288,8 @@ select {
     -webkit-transform: rotate(45deg); 
     -moz-transform: rotate(45deg); 
     -o-transform: rotate(45deg); 
+  }
+
+  .color-palette-ul {
+    li {border-bottom: 1px solid #CCC;padding-bottom: 0 !important;}
   }
