--- a/app/views/color_palettes/index.html.erb
+++ b/app/views/color_palettes/index.html.erb
@@ -3,20 +3,14 @@
 
 <%= link_to "New Color Palette", new_color_palette_path, class: 'success button nice radius' %>
 
-<%= select_tag :color_palette, options_for_select( @color_palettes.map { |cp| cp.name } ), id: 'palette-select', prompt: 'Select a palette' %>
+<%= select_tag :color_palette, options_for_select( @color_palettes.map { |cp| ["#{cp.name} (#{cp.colors.count})", cp.name] } ), id: 'palette-select', prompt: 'Select a palette' %>
 
 <div class="section-container tabs" data-section>
 <% @color_palettes.each do |color_palette| %>  
-  <% if color_palette.id.to_s == params[:color_palette_id].to_s %>
-    <section class="section active">
-  <% else %>
-    <section class="section">
-  <% end %>
-
-  <div class="title hide">
-    <h5 style="text-align: center"><%= color_palette.name %></h5>
-  </div>
-
+  <section class="section">
+    <div class="title hide">
+      <h5 style="text-align: center"><%= color_palette.name %></h5>
+    </div>
     <div class="content">
       <h4 class="subheader">Palette <%= color_palette.name %></h4>
       <div class="row">
@@ -25,13 +19,9 @@
           <%= link_to "Delete Color Palette", color_palette_path(color_palette), method: :delete, class: 'red small button nice radius right', data: {confirm: "Are you sure?"} %>
           <%= link_to "Edit Color Palette", edit_color_palette_path(color_palette), class: 'small yellow button nice radius right right-space' %>
         </div>        
-        <div class="large-5 large-offset-4 columns">
-          <ul class="inline-list">
-          </ul>
-        </div>
         <hr />
       </div>
-      <ul class="large-block-grid-4 small-block-grid-1">
+      <ul class="large-block-grid-4 small-block-grid-1 color-palette-ul">
         <%= color_swatch_for color_palette %>
       </ul>
     </div>
