--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -25,7 +25,7 @@
     <h4>Colors</h4>
     <p>We know there are a lot of colors and designs. You're able to manage all the complicated color stuff using this section!</p>
   </li>
-  <li data-button="Get Started">
+  <li data-button="Start Having Fun">
     <h4 id="joy-over" class="centered">All Done!</h4>
     <p class="centered">That's the tour! Have fun! :)</p>
   </li>
