Updated positions of joyride

--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -9,11 +9,11 @@
   <li data-id="" data-text="I want a tour!">
     <p>Hello and welcome to Johnsonite Product Manager.</p>
   </li>
-  <li data-id="no1" data-class="custom so-awesome" data-text="Next">
+  <li data-id="no1" data-class="custom so-awesome" data-text="Next" data-options="tipLocation:top;tipAnimation:fade">
     <h4>Products</h4>
     <p>Here you can create and manage indiviual products using this link. This is where you'll spend most of your time.</p>
   </li>
-  <li data-id="no2" data-button="Next" data-options="tipLocation:top;tipAnimation:fade">
+  <li data-id="no2" data-button="Next" data-options="tipLocation:right;tipAnimation:fade">
     <h4>Product Attributes</h4>
     <p>Various product attributes can be managed by using the rest of the links in this section.</p>
   </li>
@@ -21,7 +21,7 @@
     <h4>Wallbase</h4>
     <p>The Wallbase filter tool can now be mangaged using these links!</p>
   </li>
-  <li data-id="no4" data-button="Next" data-options="tipLocation:top;tipAnimation:fade">
+  <li data-id="no4" data-button="Next" data-options="tipLocation:right;tipAnimation:fade">
     <h4>Colors</h4>
     <p>We know there are a lot of colors and designs. You're able to manage all the complicated color stuff using this section!</p>
   </li>
