--- a/app/assets/stylesheets/application.css.scss.erb
+++ b/app/assets/stylesheets/application.css.scss.erb
@@ -218,7 +218,7 @@ select {
     overflow: hidden;
     background: url(<%= asset_path "dropdown_background.png" %>) no-repeat right #fff;
     border: 1px solid #ccc;
-    padding-left: 10px;
+    padding-left: 7px;
     font-size: 0.875em;
     -webkit-box-shadow: inset 0 1px 2px rgba(0, 0, 0, 0.1);
     box-shadow: inset 0 1px 2px rgba(0, 0, 0, 0.1);
@@ -294,4 +294,13 @@ select {
 
   .color-palette-ul {
     li {border-bottom: 1px solid #CCC;padding-bottom: 0 !important;}
+  }
+
+  .product-details {
+    background: whitesmoke !important;
+    border-bottom: 1px solid #CCC;
+  }
+
+  tr.product-row {
+    border-bottom: 1px solid #CCC;
   }
