Added new home page layout.

--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,8 +1,17 @@
-<h3 class="subheader ">Welcome to the Johnsonite Product Manager</h3>
+<br />
+<br />
+<br />
+<br />
+<br />
+<h3 class="subheader centered">Welcome to the Johnsonite Product Manager</h3>
 <hr />
-<p>
-  Use the navigation on the left to get started, or if you're new, you can learn what to do <%= link_to "here", 'javascript:void(0)', id: 'joyride-start' %>.
-  <br /><%= image_tag "get_started.png", style: 'width:64px; height: 68px;' %>
+<p class="centered hide-for-small" style="font-size: 26px;">
+  Use the navigation on the left to get started, or if you're new, you can learn what to do <a href='javascript:void(0)' id='joyride-start' style="color: #69F">here</a>.
+  <br /><%= image_tag "get_started.png", style: 'width:64px; height: 68px;float: left;top: -47px;position: relative;', class: 'hide-for-small' %>
+</p>
+
+<p class="centered show-for-small" style="font-size: 26px;">
+  Use the navigation at the top to get started.  
 </p>
 
 <ol class="joyride-list" data-joyride>
