--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -142,7 +142,7 @@
   </div>
 
   <div class="row centered" id="footer">
-    Copyright &copy; <%= Date.today.year %> Johnsonite.com
+    Designed by Boondock in Cleveland Assembled in Ruby Model BW3635
   </div> 
 </body>
 </html>
