--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -20,7 +20,7 @@
   </li>
   <li data-id="no1" data-class="custom so-awesome" data-text="Next" data-options="tipLocation:top;tipAnimation:fade">
     <h4>Products</h4>
-    <p>Here you can create and manage indiviual products using this link. This is where you'll spend most of your time.</p>
+    <p>Here you can create and manage individual products using this link. This is where you'll spend most of your time.</p>
   </li>
   <li data-id="no2" data-button="Next" data-options="tipLocation:right;tipAnimation:fade">
     <h4>Product Attributes</h4>
@@ -32,7 +32,7 @@
   </li>
   <li data-id="no4" data-button="Next" data-options="tipLocation:right;tipAnimation:fade">
     <h4>Colors</h4>
-    <p>We know there are a lot of colors and designs. You're able to manage all the complicated color stuff using this section!</p>
+    <p>We know there are a lot of colors and designs. You're able to manage all the complicated stuff here!</p>
   </li>
   <li data-button="Start Having Fun">
     <h4 id="joy-over" class="centered">All Done!</h4>
