--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -6,7 +6,7 @@
 <h3 class="subheader centered">Welcome to the Johnsonite Product Manager</h3>
 <hr />
 <p class="centered hide-for-small" style="font-size: 26px;">
-  Use the navigation on the left to get started, or if you're new, you can learn what to do <a href='javascript:void(0)' id='joyride-start' style="color: #69F">here</a>.
+  Use the navigation on the left to get started, or if you're new you can <a href='javascript:void(0)' id='joyride-start' style="color: #69F">take a tour</a>.
   <br /><%= image_tag "get_started.png", style: 'width:64px; height: 68px;float: left;top: -47px;position: relative;', class: 'hide-for-small' %>
 </p>
 
