--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,6 +8,9 @@
   <%= javascript_include_tag "application" %>
   <%= javascript_include_tag "vendor/custom.modernizr" %>
   <%= csrf_meta_tags %>
+  <!--[if lt IE 8]>
+    <link href="/reset.css" media="all" rel="stylesheet" />
+  <![endif]-->
 </head>
 <body>
   <nav class="top-bar">
